[package]

name = "cairo"
version = "0.0.1"
authors = ["Cedrick Cooke <cedrickc@zoho.com>"]


[dependencies.xlib]
git = "https://github.com/servo/rust-xlib"

[dependencies.freetype]
git = "https://github.com/servo/rust-freetype"

[dependencies.fontconfig]
git = "https://github.com/servo/rust-fontconfig"


[[example]]
name = "writepng"
path = "examples/writepng/src/main.rs"
